fix(css): don't allow code spans to wrap in paragraphs

--- a/assets/css/components/markdown/typography.css
+++ b/assets/css/components/markdown/typography.css
@@ -1,5 +1,9 @@
 p {
   @apply w-full mb-6 leading-relaxed;
+
+  code {
+    @apply text-nowrap;
+  }
 }
 
 dl,
